--- a/assets/stylesheets/ccaejs/_layouts.scss
+++ b/assets/stylesheets/ccaejs/_layouts.scss
@@ -1,3 +1,8 @@
 .horizontally-centered { text-align: center }
 
 .vertically-centered { margin: 50% 0 0 0 }
+
+// I'll clean this up eventually. I am currently panicing at the disco to get all this content in here in time.
+.terminal {
+  
+}
